<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">loves_family</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="costomview">是否隐藏推荐广告？</string>
    <!-- refresh string start -->

    <string name="pull_to_refresh_pull_label">下拉可以刷新</string>
    <string name="pull_to_refresh_release_label">松手即可刷新</string>
    <string name="pull_to_refresh_refreshing_label">正在刷新&#8230;</string>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="pulldown_to_update">上拉可以刷新&#8230;</string>
    <string name="release_to_update">松手即可刷新&#8230;</string>
    <string name="refreshing">正在刷新&#8230;</string>
    <!-- refresh string end -->
    <!-- 李鑫 -->
    <string name="homepager">首页</string>
    <string name="OK">确定</string>
    <string name="search">请输入关键字</string>
    <string name="back">返回</string>
    <string name="top_Companies">热门公司</string>
    <string name="more">更多……</string>
    <string name="company_name">重庆北流科技责任有限公司</string>
    <string name="chengxin">诚信：</string>
    <string name="working">业务：</string>
    <string name="car">租车</string>
    <string name="location">数据加载中……</string>
    <string name="weather">晴转多云\u300032℃</string>
    <string name="company_content">一个神奇的公司，里面有一群神奇的物种——人，他们每天都在做着各种神奇的事情！</string>
    <string name="company_property">APP开发</string>
    <string name="position">南岸区亚太商谷</string>
    <string name="distance">0.0km</string>
    <string name="area">区域</string>
    <string name="classify">分类</string>
    <string name="sort">排序</string>
    <string name="detail">商铺详情</string>
    <string name="about_us">关于我们</string>
    <string name="service_features">服务特色</string>
    <string name="business_area">营业区域</string>
    <string name="search_more">查看更多</string>
    <string name="content">\u3000\u3000我们公司秉承质量第一，顾客至上的原则，是重庆一家专注于公司形象、品牌宣传、公司企业网站建设和公司网上业务推广的公司.我公司依托强大的网站建设实力在为企业信息化建设服务的道路上，不断推陈出新,网站上线以来注册用户现已达到2000多家,我公司旗下拥有重庆信息网，SEO优化排名，烽火台软件群发，主机(美国，香港，大陆)，域名注册等网络服务，拥有一批从事于网络服务的专业团队。 竭诚为国内外广大客户朋友提供优质的服务，希望通过我们的真诚与努力能够成为您长期的合作伙伴，共创辉煌！ 现重庆信息网提供广告位招租，企业宣传，产品发布和网站建设，网站推广，SEO优化排名等网络服务</string>
    <string name="service_category">服务类别</string>
    <string name="contacts">联系我们</string>
    <string name="leader_name">李先生</string>
    <string name="leader_number">18580544821</string>
    <string name="leader_address">重庆市渝中区两路口重庆村37号</string>
    <string name="map">查看地图</string>
    <!-- 翔 -->
    <string name="system_message">系统消息</string>
    <string name="discuss_news">讨论消息</string>
    <string name="tips_way">提示方式</string>
    <string name="tip_time">提示时间</string>
    <string name="collection">我的收藏</string>
    <string name="editor">编辑</string>
    <string name="title_bar_login">登录</string>
    <string name="title_bar_forgot_password">忘记密码</string>
    <string name="title_bar_set_password">设置密码</string>
    <string name="title_bar_personal_center">个人中心</string>
    <string name="forgot_pwd">忘记密码？</string>
    <string name="hint_user">请输入用户名或手机号</string>
    <string name="hint_password">请输入密码</string>
    <string name="hint_input_phone_number">请输入手机号</string>
    <string name="hint_input_auth_code">请输入验证码</string>
    <string name="hint_input_new_password">请输入新密码</string>
    <string name="hint_affirm_password">请确认密码</string>
    <string name="txt_default_nickname">strive-少年</string>
    <string name="txt_default_autograph">如果你不懂我的沉默，你就永远也不明白我说的话语。</string>
    <string name="txt_address">地址:</string>
    <string name="title_activity_frag_forgot">FragForgotActivity</string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
    <string name="title_activity_set_password">SetPasswordActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_personal_center">PersonalCenterActivity</string>
    <!-- map -->
    <string name="demo_name_basemap">基本地图功能</string>
    <string name="demo_title_basemap">基本地图功能--BaseMapDemo</string>
    <string name="demo_desc_basemap">创建一张百度地图并管理地图的生命周期</string>
    <string name="demo_name_location">定位图层展示</string>
    <string name="demo_title_location">定位图层展示--LocationDemo</string>
    <string name="demo_desc_location">介绍定位图层的基本用法</string>
    <string name="key_error">"请在  DemoApplication.java文件输入正确的授权Key！\r\n申请地址：http://dev.baidu.com/wiki/static/imap/key/"</string>
    <string name="navi_tip">百度地图SDK支持通过相关的接口，调启百度地图客户端（v5.0以上）导航和Web端百度地图导航。</string>
    <string name="title_activity_cloud_search_demo">云检索使用介绍</string>
    <string name="cloud_search_tips"> \t\tLBS.云是百度地图针对LBS开发者推出的平台级服务。结合已有的地图API和SDK服务。通过开放服务端存储和计算能力,提供海量位置数据存储、检索、展示一体化解决方案。\n\n
          \t\t该服务对开发者免费开放。测试demo里写入了测试的ak。开发者可以使用测试ak查看 LBS.云检索的效果。如果开发者要使用自己的数据，请在申请ak后替换demo中的ak。\n\n
          \t\t如有任何关于LBS.云服务的问题,诸如如何申请ak、如何存储和检索数据等，请访问百度地图官方“LBS开放平台”。地址：http://lbsyun.baidu.com/  \n</string>
    <string name="panorama_tips">\t\t百度地图SDK为您免费提供全景图的功能。\n
      \t\t利用接口，可查询、开启并操作更丰富的全景图。\n
      \t\t以下三个示例分别向您展示了三种调启全景图的入口，您可在实际操作中灵活运用。\n
      \t\t全景图还提供了Item绘制能力，您可在第三个示例中查看具体使用方法。</string>
    <string name="panorama_poi_tips"> 首先根据关键词进行POI检索，点击地图上的POI点，根据POI的UID进入全景</string>
    <string name="panorama_geo_tips">单击地图以选取坐标点</string>
    <string name="demo_title_share">短串分享功能 --ShareDemo</string>
    <string name="demo_name_share">短串分享</string>
    <string name="demo_desc_share">介绍关键词查询、suggestion查询和查看餐饮类Place详情页功能</string>
    <string name="share_tip">\t\t短串分享是指，用户搜索查询后得到的每一个地理位置结果将会对应一条短串（短链接），用户可以通过短信、邮件或第三方分享组件（如微博、微信等）把短串分享给其他用户从而实现地理位置信息的分享。当其他用户收到分享的短串后，点击短串即可打开手机上的百度地图客户端或者手机浏览器进行查看。\n\n
                \t\t例如，用户搜索“百度大厦”后通过短信使用短串分享功能把该地点分享给好友，好友点击短信中的短串“http://j.map.baidu.com/XLCrk”后可以调起百度地图客户端或者手机浏览器查看“百度大厦”的地理位置信息。\n\n
                \t\t目前短串分享功能暂时开放了“POI搜索结果分享”和“反向地理编码结果分享”，日后会开放更多的功能，欢迎广大开发者使用短</string>
    <string name="title_activity_panorama_activity_main">全景图功能</string>
    <string name="title_activity_panorama_poi_selector">通过POI进入全景图</string>
    <string name="title_activity_panorama_geo_selector">通过地理坐标进入全景图</string>
    <string name="title_activity_panorama_demo">全景图功能</string>

    
    <string name="startlocation">开启定位</string>
    <string name="stoplocation">停止定位</string>
    <string name="hight_accuracy_desc">高精度定位模式下，会同时使用GPS、Wifi和基站定位，返回的是当前条件下精度最好的定位结果</string>
    <string name="saving_battery_desc">低功耗定位模式下，仅使用网络定位即Wifi和基站定位，返回的是当前条件下精度最好的网络定位结果</string>
    <string name="device_sensor_desc">仅用设备定位模式下，只使用用户的GPS进行定位。这个模式下，由于GPS芯片锁定需要时间，首次定位速度会需要一定的时间</string>
    <color name="bgColor_gray">#f2f2f2</color>
    <color name="bgColor_white">#ffffff</color>
    <color name="font_color_4c4c4c">#4c4c4c</color>
    <color name="title_bar_font_color">#646464</color>
    <color name="forgot_font_color">#999999</color>
    <color name="font_color_b3b3b3">#b3b3b3</color>
    <color name="cc">#808080</color>

</resources>