<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/list_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/search_btn"
            android:hint="@string/search"
            android:paddingBottom="13dp"
            android:paddingLeft="7dp"
            android:paddingTop="13dp" />

        <ImageView
            android:id="@+id/list_sure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/search_sure" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/area"
            style="@style/popupwindow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:drawableRight="@drawable/arrow_selector"
            android:text="@string/area" />

        <View
            android:layout_width="2dp"
            android:layout_height="45dp"
            android:background="@drawable/line_v" />

        <Button
            android:id="@+id/classify"
            style="@style/popupwindow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:drawableRight="@drawable/arrow_selector"
            android:text="@string/classify" />

        <View
            android:layout_width="2dp"
            android:layout_height="45dp"
            android:background="@drawable/line_v" />

        <Button
            android:id="@+id/sort"
            style="@style/popupwindow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:drawableRight="@drawable/arrow_selector"
            android:text="@string/sort" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@drawable/line_h" />


    <ListView
        android:id="@+id/lists"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:choiceMode="singleChoice"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:smoothScrollbar="true" />

</LinearLayout>