<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="blocksDescendants"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/company_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:singleLine="true"
                    android:text="@string/company_name"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/logo_identification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="9dp"
                    android:background="@drawable/identification"
                    android:contentDescription="@string/app_name" />

                <TextView
                    android:id="@+id/tv_chengxin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/chengxin"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/stars"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="17.5dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/star50" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/company_content"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="3dp"
                    android:layout_weight="0.87"
                    android:singleLine="true"
                    android:text="@string/company_content"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/working"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/working"
                    android:layout_width="60dp"
                    android:gravity="left|center_vertical"
                    android:layout_height="wrap_content"
                    android:text="@string/car"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:id="@+id/line_v"
            android:layout_width="1dp"
            android:layout_height="50dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/line_v" />

        <ImageButton
            android:id="@+id/tel_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/telephone_image"
            android:contentDescription="@string/app_name" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="3dp"
        android:background="@drawable/line_h" />

</LinearLayout>