<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D9D6FF"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/title_bg"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="42dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="3dp"
            android:background="@null"
            android:contentDescription="@string/app_name"
            android:src="@drawable/backward_normal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="-45dp"
            android:gravity="center"
            android:text="@string/detail"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@drawable/company_title"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null" />

        <TextView
            android:id="@+id/companyname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:background="@null"
            android:gravity="center"
            android:text="@string/company_name"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/companyiidentification"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/identification"
            android:contentDescription="@string/app_name" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" 
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="3dp"
            android:orientation="vertical" >

            <TextView
                style="@style/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_us" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@drawable/line_h" />

            <TextView
                android:id="@+id/contentOfus"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="3dp"
                android:background="@color/white"
                android:text="@string/content"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@drawable/line_h" />

            <Button
                android:id="@+id/more_1"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="1dp"
                android:background="@drawable/down_more" />

            <TextView
                style="@style/tv_title"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/service_features" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@drawable/line_h" />

            <TextView
                android:id="@+id/contentOfservice"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="3dp"
                android:background="@color/white"
                android:text="@string/content"
                android:textSize="14sp" />

            <Button
                android:id="@+id/more_2"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginBottom="3dp"
                android:background="@drawable/down_more" />

            <TextView
                style="@style/tv_title"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="3dp"
                android:text="@string/business_area" />

            <ImageView
                android:id="@+id/contentOfarea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/cqcec"
                android:contentDescription="@string/action_settings" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@drawable/line_h" />

            <TextView
                style="@style/tv_title"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/service_category" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@drawable/line_h" />

            <TextView
                android:id="@+id/service_category"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="3dp"
                android:background="@color/white"
                android:text="@string/content"
                android:textSize="14sp" />

            <Button
                android:id="@+id/more_3"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginBottom="3dp"
                android:background="@drawable/down_more" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/line_h" />

            <TextView
                style="@style/tv_title"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/contacts" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical" >

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@drawable/line_h" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_margin="5dp"
                    android:orientation="horizontal" >

                    <ImageButton
                        android:id="@+id/leader_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="3dp"
                        android:background="@null"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/bgimg_user" />

                    <TextView
                        android:id="@+id/leader_name"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="8dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/leader_name" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@drawable/line_h" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_margin="5dp"
                    android:orientation="horizontal" >

                    <ImageButton
                        android:id="@+id/leader_tel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:background="@null"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/leader_tel" />

                    <TextView
                        android:id="@+id/leader_number"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="8dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/leader_number" />

                    <ImageButton
                        android:id="@+id/telephing"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="5dp"
                        android:background="@null"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/telephing" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@drawable/line_h" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_margin="5dp"
                    android:orientation="horizontal" >

                    <ImageButton
                        android:id="@+id/leader_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="3dp"
                        android:background="@null"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/location_leader" />

                    <TextView
                        android:id="@+id/leader_address"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="8dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:singleLine="true"
                        android:text="@string/leader_address" />

                    <ImageButton
                        android:id="@+id/map"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="5dp"
                        android:background="@null"
                        android:src="@drawable/location_image"
                        android:textColor="#8899ff" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>