<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor_gray"
    android:orientation="vertical"
    tools:context="com.phrong.ihome.login.LoginActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bgimg_navigation_bar" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/title_bar_login"
            android:textColor="@color/title_bar_font_color"
            android:textSize="@dimen/font_size36" />

        <Button
            android:id="@+id/btnForgotPassWord"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/px20"
            android:background="@drawable/bgimg_forgot_password"
            android:text="@string/forgot_pwd"
            android:textColor="#999999"
            android:textSize="@dimen/px20" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/px20" >

        <EditText
            android:id="@+id/edtInputUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bgimg_input"
            android:drawableLeft="@drawable/bgimg_user"
            android:drawablePadding="@dimen/px10"
            android:hint="@string/hint_user"
            android:paddingLeft="@dimen/px10"
            android:singleLine="true"
            android:textColor="@color/title_bar_font_color"
            android:textColorHint="@color/forgot_font_color"
            android:textSize="@dimen/font_size20" />

        <EditText
            android:id="@+id/edtInputPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/px20"
            android:background="@drawable/bgimg_input"
            android:drawableLeft="@drawable/bgimg_password"
            android:drawablePadding="@dimen/px15"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/px17"
            android:singleLine="true"
            android:textColor="@color/title_bar_font_color"
            android:textColorHint="@color/forgot_font_color"
            android:textSize="@dimen/font_size20" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/px20" >

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bgimg_register" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@drawable/bgimg_login" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>