<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor_gray"
    android:orientation="vertical"
    tools:context="com.phrong.ihome.login.SetPasswordActivity" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bgimg_navigation_bar"
        android:gravity="center"
        android:src="@drawable/bgimg_navigation_bar"
        android:text="@string/title_bar_set_password"
        android:textColor="@color/title_bar_font_color"
        android:textSize="@dimen/font_size36" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/px20" >

        <EditText
            android:id="@+id/edtNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bgimg_input"
            android:hint="@string/hint_input_new_password"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/px10"
            android:singleLine="true"
            android:textColor="@color/title_bar_font_color"
            android:textColorHint="@color/forgot_font_color"
            android:textSize="@dimen/font_size20" />

        <EditText
            android:id="@+id/edtAffirmPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/px20"
            android:background="@drawable/bgimg_input"
            android:hint="@string/hint_affirm_password"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/px10"
            android:singleLine="true"
            android:textColor="@color/title_bar_font_color"
            android:textColorHint="@color/forgot_font_color"
            android:textSize="@dimen/font_size20" />

        <ImageButton
            android:id="@+id/btnReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/px20"
            android:background="@null"
            android:src="@drawable/bgimg_forgot_password" />
    </LinearLayout>

</LinearLayout>